@@ -1,12 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2016/02/04 11:49:57 wiz Exp $
-include/rest/rest/facebook-proxy-call.h
-include/rest/rest/facebook-proxy.h
-include/rest/rest/flickr-proxy-call.h
-include/rest/rest/flickr-proxy.h
-include/rest/rest/oauth-proxy-call.h
-include/rest/rest/oauth-proxy.h
-include/rest/rest/rest-proxy-call.h
-include/rest/rest/rest-proxy.h
-include/rest/rest/rest-xml-parser.h
-lib/librest.la
-lib/pkgconfig/rest.pc
